--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -183,8 +183,15 @@
 }
 
 @media (max-width: 768px) {
-  .hero h1 {
-    font-size: 2.0rem; // Slightly smaller to prevent excessive wrapping
-    line-height: 1.3;
+  .hero {
+    h1 {
+      font-size: 2rem; // Slightly smaller to prevent excessive wrapping
+      line-height: 1.3;
+    }
+  }
+
+  .hero-container{
+    margin-top: 5px;
+    height: 300px;
   }
 }
