--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -1,5 +1,4 @@
-section,
-.hero {
+section {
   min-height: calc(100vh - 40px);
   display: flex;
   justify-content: center;
